--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,13 +26,17 @@ dependencies {
     })
 
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+    //noinspection GradleCompatible
     compile 'com.android.support:appcompat-v7:24.2.1'
+    //noinspection GradleCompatible
     compile 'com.android.support:design:24.2.1'
     compile 'com.github.gcacace:signature-pad:1.2.0'
+    //noinspection GradleCompatible
     compile 'com.google.firebase:firebase-messaging:10.0.1'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    //noinspection GradleCompatible
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.firebase:firebase-crash:10.0.1'
